syntax = "proto3";

package data_layer;

service DataLayer {
    // Starts async provisioning task
    rpc StartProvisioningTask (ProvisionRequest) returns (StartTaskResponse);

    // Start async deprovisioning task
    rpc StartDeprovisioningTask (DeprovisionRequest) returns (StartTaskResponse);

    // Checks the status of provisioning/deprovisioning
    rpc GetTaskStatus (GetTaskStatusRequest) returns (GetTaskStatusResponse);

}

message StartTaskResponse {
    string task_id = 1;
}

message ProvisionRequest {
    string account_id = 1;
    string function_name = 2;
    string schema = 3;
}

message DeprovisionRequest {
    string account_id = 1;
    string function_name = 2;
}


message GetTaskStatusRequest {
    string task_id = 1;
}

enum TaskStatus {
    UNSPECIFIED = 0;
    PENDING = 1;
    COMPLETE = 2;
    FAILED = 3;
}

message GetTaskStatusResponse {
    TaskStatus status = 1;
}
